sass/wp-blocks/media-text.scss
.wp-block-media-text {

    padding-top: var(--half-block-spacing);
    padding-bottom: var(--half-block-spacing);
    margin: 0 auto;
    column-gap: var(--grid-margin);

    .wp-block-group {
        padding-top: 0;
        padding-bottom: 0;
        margin-bottom: 0;

        &:not(:has(> :not(p, h1, h2, h3, h4, h5, h6, figure))) {
            margin-bottom: calc(-1 * var(--grid-margin));
        }
    }

    @include media-breakpoint-down(xl) {
        width: 100% !important;
    }

    @include media-breakpoint-down(md) {
        display: flex;
        row-gap: var(--double-grid-margin);

        &.is-stacked-on-mobile {
            flex-direction: column !important;
        }
    }

    &__media {
        border-radius: var(--border-radius-large);
        overflow: hidden;

        figcaption {
            font-size: $small-font-size;
            text-align: right;
            margin: 0.3em 0.3em 0.5em 0.3em;
        }
    }

    &__content {
        padding: 0 0 0 var(--double-grid-margin) !important;

        .wp-block-image {
            margin-bottom: var(--grid-margin);
        }

        @include media-breakpoint-down(md) {
            padding: 0 !important;
        }
    }

    &.has-media-on-the-right {

        .wp-block-media-text__content {
            padding: 0 var(--double-grid-margin) 0 0 !important;

            @include media-breakpoint-down(md) {
                padding: 0 !important;
            }
        }

        @include media-breakpoint-down(md) {

            .wp-block-media-text__media {
                order: -1;
            }
        }
    }
}

.entry-content > .wp-block-media-text {

    &:first-child {
        padding-top: 0;
    }

    &.has-background,
    &.has-shadow {

        &:first-child {
            padding-top: var(--grid-margin);
        }
    }
}

.wp-block-column .wp-block-media-text {
    margin: 0;
    padding: 0;
    width: 100%;
    height: fit-content;

    border-radius: var(--border-radius-large);
    overflow: hidden;

    row-gap: var(--half-grid-margin);

    &__content {
        padding: var(--half-grid-margin) var(--grid-margin) var(--grid-margin) var(--grid-margin) !important;
    }

    figure {
        height: 100%;
        border-radius: var(--border-radius-medium) var(--border-radius-medium) 0 0;
    }
}

